samples/_failures_safe/1761795683_3a984c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_68c1b6dc.c: In function ‘main’:
./samples/SAFE/__tmp_68c1b6dc.c:121:13: error: expected expression at end of input
  121 |             print_matrix(rows2, cols2,
      |             ^~~~~~~~~~~~
./samples/SAFE/__tmp_68c1b6dc.c:121:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_68c1b6dc.c:121:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_68c1b6dc.c:121:13: error: expected declaration or statement at end of input
